# flowerpower-job-queue

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: architecture.md  prd.md  spec.md
docs/context/: flowerpower.md  repomix-output.xml
src/flowerpower_job_queue/: __init__.py
src/flowerpower_job_queue/backends/: __init__.py  rq_adapter.py
src/flowerpower_job_queue/cli/: __init__.py  main.py
src/flowerpower_job_queue/core/: __init__.py  base.py  job.py  manager.py
