[project]
name = "flowerpower-job-queue"
version = "0.1.0"
description = "A specialized job scheduling and queue management library exclusively designed for FlowerPower pipeline runs"
readme = "README.md"
authors = [{ name = "legout", email = "ligno.blades@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["flowerpower>=0.20.0", "msgspec>=0.19.0"]

[project.optional-dependencies]


# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
]

# Testing dependencies
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "fakeredis>=2.19.0",
    "aioresponses>=0.7.0",
    "freezegun>=1.2.0",
]

# Development dependencies
dev = ["ruff>=0.3.0", "isort>=5.13.0", "mypy>=1.9.0", "pre-commit>=3.7.0"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/yourusername/flowerpower-job-queue"
Repository = "https://github.com/yourusername/flowerpower-job-queue"
Documentation = "https://github.com/yourusername/flowerpower-job-queue#readme"
"Bug Tracker" = "https://github.com/yourusername/flowerpower-job-queue/issues"

[project.scripts]
flowerpower-queue = "flowerpower_job_queue.cli.main:queue"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src/flowerpower_job_queue --cov-report=term-missing --cov-report=html"
